<resources>
    <string name="app_name">DisTask</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_view">image_view</string>
    <string name="welcome">Welcome!</string>
    <string name="tv_title_auth">Check your E-mail</string>
    <string name="tv_desc_auth">We have send your a reset password link on your registered e-mail address.</string>
    <string name="title_login">Login to your <br></br> account</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="txt_desc_forgot">Please enter your email address and <br></br> we would send you a link to reset your password</string>
    <string name="create_your_account">Create your <br></br> account</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="txt_error">Not empty</string>
    <string name="txt_error_password">Password Mismatch</string>
    <string name="txt_user">User</string>
    <string name="txt_error_register">Register Failed</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="onboardtext">In this application you can manage your tasks with a time limit and you can also take notes whatever you want.</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="logout">Logout</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="submit">Save</string>
    <string name="date">Date</string>
    <string name="my_notes">My Notes</string>
    <string name="my_tasks">My Tasks</string>
    <string name="save">Save</string>
    <string name="time">Time</string>
    <string name="set_task">Set Task</string>
    <string name="my_profile">My Profile</string>
    <string name="text_notes">Is there any note you want to add?</string>
    <string name="text_home">Is there any task you want to add?</string>
    <string name="add_task">Add Task +</string>
    <string name="set_note">Set Note</string>
</resources>