<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.AddTaskActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/set_task"
        android:textColor="@color/colormain_blue"
        android:fontFamily="@font/poppins_bold"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_once_date"
            android:layout_width="50dp"
            android:background="@color/white"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_calendar_today_24" />

        <TextView
            android:id="@+id/tv_once_date"
            android:layout_width="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/date" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_once_time"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/ic_baseline_access_alarm_24" />

        <TextView
            android:id="@+id/tv_once_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            android:layout_marginStart="5dp"
            android:text="@string/time" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/et_title_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:fontFamily="@font/poppins_regular"
            android:inputType="textCapSentences"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/et_description_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:fontFamily="@font/poppins_regular"
            android:inputType="textCapSentences"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_one_time_alarm"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins_bold"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/save" />

</LinearLayout>