<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/image_view"
            android:src="@drawable/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_line_profile" />

        <TextView
            android:id="@+id/tv_username_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/username"
            android:textColor="@color/colormain_blue"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/iv_profile"
            app:layout_constraintStart_toStartOf="@+id/iv_profile"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile"
            tools:textAlignment="center" />

        <TextView
            android:id="@+id/tv_email_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/e_mail"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_username_profile"
            app:layout_constraintStart_toStartOf="@+id/tv_username_profile"
            app:layout_constraintTop_toBottomOf="@+id/tv_username_profile" />

        <ImageButton
            android:id="@+id/ib_logout_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="30dp"
            android:background="@color/white"
            android:src="@drawable/logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_logout_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/logout"
            android:textColor="#FFDD1010"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/ib_logout_profile"
            app:layout_constraintEnd_toStartOf="@+id/ib_logout_profile"
            app:layout_constraintTop_toTopOf="@+id/ib_logout_profile" />

        <TextView
            android:id="@+id/tv_myprofile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/my_profile"
            android:textColor="@color/colormain_blue"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_line_profile"
            android:layout_width="352dp"
            android:layout_height="4dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/image_view"
            android:src="@drawable/line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_myprofile" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>