<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_my_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/my_tasks"
            android:textColor="@color/colormain_blue"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_line_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/image_view"
            android:src="@drawable/line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_my_task" />

        <ImageView
            android:id="@+id/iv_ic_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/image_view"
            android:src="@drawable/ic_task"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_line_task" />

        <TextView
            android:id="@+id/tv_add_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/add_task"
            android:textColor="@color/colormain_blue"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_ic_task"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/iv_ic_task"
            app:layout_constraintTop_toBottomOf="@+id/iv_line_task"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/iv_tasks"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/image_view"
            android:src="@drawable/task"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_task"
            app:layout_constraintVertical_bias="0.259" />

        <TextView
            android:id="@+id/tv_tasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/text_home"
            app:layout_constraintEnd_toEndOf="@+id/iv_tasks"
            app:layout_constraintStart_toStartOf="@+id/iv_tasks"
            app:layout_constraintTop_toBottomOf="@+id/iv_tasks" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>